WP-8816 Fixes to the footer to align menu, fix to align md megamenu with logo position

--- a/sass/partials/design/_footer.sass
+++ b/sass/partials/design/_footer.sass
@@ -465,11 +465,12 @@ input.signup-submit
             color: $white !important
 
 #ftr-logo
-  margin-top: 0px
+  margin-top: 0
   .svg &
     background: image_url("logo.svg") no-repeat 0 0px
     background-size: 100%
     height: 75px
+    margin-left: 0
     width: 200px
   +breakpoint($bp-tablet-port-max)
     .svg &, .no-js &, .no-svg &
